[package]
name = "temporal-helpers"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
temporal-client = { git = "https://github.com/temporalio/sdk-core", package = "temporal-client" }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core", package = "temporal-sdk" }
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core", package = "temporal-sdk-core" }
temporal-sdk-core-api = { git = "https://github.com/temporalio/sdk-core", package = "temporal-sdk-core-api" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core", package = "temporal-sdk-core-protos" }